<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Random Image</string>
    <string name="mini_widget_name">Mini Widget</string>
    <string name="image_widget_name">Random Image Frame</string>
    <string name="stacked_image_widget_name">Stacked Image Frame</string>
    <string name="title_activity_display_image_details">Image Details</string>
    <string name="title_activity_display_images">Configure Image List</string>
    <string name="text_initializing">Initializing&#8230;</string>
    <string name="text_no_image">No image</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_remove">Remove</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_dont_show">Do not show again</string>
    <string name="default_list_name">Image List</string>

    <!-- Strings for image info -->
    <string name="info_file_name">File name:</string>
    <string name="info_file_location">Folder:</string>
    <string name="info_file_date">Date:</string>

    <!-- Strings for menus -->
    <string name="menu_select_images_for_removal">Remove images</string>
    <string name="menu_remove_images">Remove selected images</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_select_all">Select all images</string>
    <string name="menu_add_images">Add images</string>
    <string name="menu_add_single_images">Add single images</string>
    <string name="menu_add_image_folder">Add an image folder</string>
    <string name="menu_manage_lists">Manage image lists</string>
    <string name="menu_backup_list">Backup image list</string>
    <string name="menu_restore_list">Restore image list</string>
    <string name="menu_rename_list">Rename current image list</string>
    <string name="menu_clone_list">Clone current image list</string>
    <string name="menu_create_list">Create new image list</string>
    <string name="menu_switch_list">Switch image list</string>
    <string name="menu_delete_list">Delete image list</string>
    <string name="menu_remove_from_list">Remove image from list</string>
    <string name="menu_display_list">Display image list</string>

</resources>