<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.jeisfeld.randomimage.DisplayRandomImageActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_checkbox"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_select_all"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_cancel"/>
    <item
        android:id="@+id/action_remove_images"
        android:icon="@drawable/ic_action_remove_checked"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_remove_images"/>

</menu>