<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.jeisfeld.randomimage.DisplayRandomImageActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_checkboxes"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_select_all_images"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_cancel"/>
    <item
        android:id="@+id/action_add_image_folder"
        android:icon="@drawable/ic_action_add_folder"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_image_folder"/>
    <item
        android:id="@+id/action_add_images"
        android:icon="@drawable/ic_action_okay"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_images"/>

</menu>